Add graph demo page (WIP for the website)

--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
       }
     </script>
 
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
