--- a/src/demos/demo1.html
+++ b/src/demos/demo1.html
@@ -69,6 +69,6 @@
       </p>
     </div>
 
-    <script type="module" src="./demo1.tsx"></script>
+    <script type="module" src="./demo1/index.tsx"></script>
   </body>
 </html>
