Improve calendar style

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       if (mode) {
         const css = `
           body {
-            background-color: ${mode === 'dark' ? '#1c1812' : 'white'};
+            background-color: ${mode === 'dark' ? '#1F1F29' : '#FBF7FC'};
           }
         `
         const style = document.createElement('style')
