--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/images/icon.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="/src/images/icon-192.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="512x512"
+      href="/src/images/icon-512.png"
+    />
     <link rel="manifest" href="/src/manifest.json" />
     <meta
       name="viewport"
