--- a/packages/webapp/index.html
+++ b/packages/webapp/index.html
@@ -23,7 +23,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-PE74WG5DB8"
+      src="https://www.googletagmanager.com/gtag/js?id=G-6PHDDZW2V2"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || []
@@ -31,8 +31,7 @@
         dataLayer.push(arguments)
       }
       gtag('js', new Date())
-
-      gtag('config', 'G-PE74WG5DB8')
+      gtag('config', 'G-6PHDDZW2V2')
     </script>
   </head>
   <body>
